[package]
name = "np"
version = "0.1.0"
authors = ["Ravi V"]
edition = "2021"
description = """
A network performance measurement tool for TCP/UCP/QUIC protocols. Similar to iperf3 in usage.
"""
keywords = ["networking", "performance", "iperf3", "quic", "tcp", "udp"]
repository = "https://github.com/ravi861/netperf-rs"
readme = "README.md"
license = "Apache-2.0"
exclude = [".github", ".gitignore", "*.pcap", "*.log", "tags"]

[dependencies]
argparse = "0.2.2"
rustls = { version = "0.20", default-features = false, features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.0"
rcgen = "0.10.0"
bytes = "1"
mio = {  version="0.8.6", features=["net"] }
quinn = { version= "0.9.3", features=["runtime-async-std"] }
quinn-proto = "0.9.2"
serde = { version="1.0.152", default-features = false, features=["derive"] }
serde_json = "1.0.93"
socket2 = "0.4.7"
futures = { version = "0.3", default-features = false, features = ["executor"] }
#libc = "0.2.139"

[profile.release]
strip = true
#codegen-units = 1
#lto = true
#opt-level = "z"
#panic = "abort"
