[package]
name = "nperf"
version = "0.3.0"
authors = ["Ravi V"]
edition = "2021"
description = """
A network performance measurement tool for TCP/UCP/QUIC/TLS protocols. Similar to iperf3 in usage.
"""
keywords = ["networking", "performance", "iperf", "quic"]
repository = "https://github.com/ravi861/nperf-rs"
readme = "README.md"
license = "Apache-2.0"
exclude = [".github", ".gitignore", "*.pcap", "*.log", "tags"]

[dependencies]
argparse = "0.2.2"
rustls = { version = "0.20", default-features = false, features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.0"
rcgen = { default-features = false, version = "0.10.0" }
bytes = { default-features = false, version = "1" }
mio = {  version="0.8.6", features=["net", "os-ext"] }
quinn = { version ="0.9.3", features=["runtime-async-std"], default-features = false }
quinn-proto = { version = "0.9.2", features=["tls-rustls"], default-features = false }
serde = { version="1.0.152", default-features = false, features= ["derive"] }
serde_json = "1.0.94"
socket2 = "0.4.9"
futures = { version = "0.3", default-features = false, features = ["executor"] }
tracing-timing = {  version = "0.6.0", default-features = false }
tracing = { version = "0.1.2", default-features = false }
libc = "0.2.139"

[profile.release]
strip = true
#codegen-units = 1
#lto = true
#opt-level = "z"
#panic = "abort"
